<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Intermeet</string>
    <string name="logo">LOGO</string>
    <string name="give_an_intro">Give an intro about yourself</string>
    <string name="app_motto">Where we initiate the meet between you and others</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="i_am">I am...</string>
    <string name="forgot_password_email">Enter your email associated with your account. We will send you a reset link</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="forgot_password_button">Recover Password</string>
    <string name="reset_password_title">Create a new Password</string>
    <string name="password_description">Your new password must be different from previously used passwords</string>
    <string name="new_password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_match">Both passwords must match</string>
    <string name="setting_title">Settings</string>
    <string name="account_title">Account</string>
    <string name="email">Email</string>
    <string name="likes_page">Likes Page</string>
    <string name="see_who_lik">Those who like you will be shown here</string>
    <string name="payments">Payments</string>
    <string name="verification">Verification</string>
    <string name="phone_number">Phone Number</string>
    <string name="pause_account">Pause Account</string>
    <string name="notifications">Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="App_title">App</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="safety_title">Safety</string>
    <string name="block_list">Block List</string>
    <string name="legal_title">Legal</string>
    <string name="TOS">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="verify_email">Change Email</string>
    <string name="settings_emailTitle">Email</string>
    <string name="promotion_slider">Promotions</string>
    <string name="payments_title">Payments</string>
    <string name="what_s_your">
        Whats your name?
    </string>
    <string name="what_email">
        Whats your email?
    </string>
    <string name="what_birthday">
        Whats your birthday?
    </string>
    <string name="what_school">
        Are you in school?
    </string>
    <string name="location_access">
        Can we introduce you to people nearby?
    </string>
    <string name="location_subtext">
        Location is a must - its how we set you up with the real people you can meet!
    </string>
    <string name="just_incase">
        Just incase we need to reach out to you !
    </string>
    <string name="you_should_">
        You should get to know each others names first.
    </string>
    <string name="next">Next</string>
    <string name="make_a_pass">Make a password!</string>
    <string name="we_want_to_">We want to make sure your account stays safe and secure!</string>
    <string name="textview_email">Email</string>
    <string name="textview_password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_sign_up">Don\'t have an account? Signup</string>
    <string name="talk_a_little">Talk a little more about yourself</string>
    <string name="make_your_personality">Make your personality standout from the crowd</string>
    <string name="email_hint">e.g.contact@intermediate.com</string>
    <string name="delete">Delete</string>
    <string name="checkmark">Checkmark</string>
    <string-array name="prompt_options">
        <item>I\'m known for…</item>
        <item>I would love to go to…</item>
        <item>I guarantee that…</item>
        <item>I\'m a regular at…</item>
        <item>I\'m obsessed with…</item>
    </string-array>
    <string name="get_to_know">
    Lets get to know you a bit more
    </string>
    <string name="gender">
        Gender
    </string>
    <string name="height">
        Height
    </string>
    <string name="religion">
        Religion
    </string>
    <string name="race">
        Ethnicity 
    </string>
    <string name="work">
        Occupation
    </string>
    <string name="sex">
        Sexuality
    </string>
    <string name="pronoun">
        Pronouns
    </string>
    <string name="interest">
        Interests
    </string>
    <string name="input_default">
        >
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food">
        Food
    </string>
    <string name="entertain">
        Entertainment
    </string>
    <string name="creativity">
        Creativity
    </string>
    <string-array name="music">
        <item>Afro</item>
        <item>Arab</item>
        <item>Blues</item>
        <item>Classical</item>
        <item>Country</item>
        <item>Desi</item>
        <item>EDM</item>
        <item>Electronic</item>
        <item>Funk</item>
        <item>Hip hop</item>
        <item>Indie</item>
        <item>Jazz</item>
        <item>K-pop</item>
        <item>Latin</item>
        <item>Metal</item>
        <item>Pop</item>
        <item>Punk</item>
        <item>R&amp;B</item>
        <item>Rap</item>
        <item>Reggae</item>
        <item>Rock</item>
        <item>Soul</item>
        <item>Techno</item>
    </string-array>
    <string-array name="values">
        <item>Ambition</item>
        <item>Being Active</item>
        <item>Family-oriented</item>
        <item>Open-minded</item>
        <item>Romantic</item>
        <item>Confidence</item>
        <item>Creativity</item>
        <item>Empathy</item>
        <item>Intelligence</item>
        <item>Positivity</item>
        <item>Chill</item>
        <item>Self-awareness</item>
        <item>Humorous</item>
        <item>Socially Aware</item>
    </string-array>
    <string-array name="social">
        <item>Bars</item>
        <item>Clubs</item>
        <item>Cafe-hopping</item>
        <item>Festival</item>
        <item>Theater</item>
        <item>Nightlife</item>
        <item>Concert</item>
    </string-array>
    <string name="customTag">
        Custome Tag
    </string>
    <string name="photo_upload_title">Upload a few photos to show yourself off.</string>
    <string name="never_miss_">Never miss a message</string>
    <string name="allow_notif">Allow notifications so we can let you know when you have a match and messages</string>
    <string-array name="food_tags">
        <item>Pizza</item>
        <item>Sesame Chicken</item>
        <item>Nachos</item>
        <item>Seaweed Salad</item>
        <item>Chili</item>
        <item>Hummus</item>
        <item>Sweet Potato fries</item>
        <item>Quesadilla</item>
        <item>Chicken Tenders</item>
        <item>Wonton Soup</item>
        <item>Sushi</item>
        <item>Garlic Knots</item>
        <item>Burritos</item>
        <item>Thai tea</item>
        <item>Milkshake</item>
        <item>Hamburger</item>
        <item>Chicken Wings</item>
        <item>Boba Milk Tea</item>
        <item>Doughnut</item>
        <item>Tacos</item>
        <item>Pie</item>
        <item>French Fries</item>
        <item>Salads</item>
        <item>Gyoza</item>
        <item>Chicken Sandwich</item>
        <item>Icecream</item>
        <item>Gyro</item>
        <item>Mac and Cheese</item>
        <item>Chicken Nuggets</item>
        <item>Miso Soup</item>
        <item>Pad Thai</item>
        <item>Cheeseburger</item>
        <item>Ramen</item>
    </string-array>
    <string-array name="show_tags">
        <item>Anime</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Going Out</item>
        <item>Animated</item>
        <item>Bollywood</item>
        <item>Comedy</item>
        <item>Cooking Shows</item>
        <item>Crime</item>
        <item>Documentaries</item>
        <item>Drama</item>
        <item>Fantasy</item>
        <item>Game Shows</item>
        <item>Horrors</item>
        <item>Indie</item>
        <item>K-Drama</item>
        <item>Mystery</item>
        <item>Reality Shows</item>
        <item>Rom-com</item>
        <item>Romance</item>
        <item>Sci-fi</item>
        <item>Superhero</item>
        <item>Thriller</item>
    </string-array>
    <string-array name="Creativity">
        <item>Art</item>
        <item>Crafts</item>
        <item>Dancing</item>
        <item>Design</item>
        <item>Make-up</item>
        <item>Video Editing</item>
        <item>Photography</item>
        <item>Singing</item>
        <item>Writing</item>

    </string-array>
    <string name="preferencePage">
        Lets see who you want to meet
    </string>
    <string name="people_filter">
        I\'m interested in…
    </string>
    <string name="distance">
        Maximum Distance
    </string>
    <string name="drink">
        Drinking
    </string>
    <string name="smoke">
        Smoking
    </string>
    <string name="drug">
        Drugs
    </string>
    <string name="politics">
        Politics
    </string>
    <string name="distanceset">
        Distance
    </string>
    <string name="distancemessage">
        How far are you willing to go?
    </string>
    <string name="distanceinfo">
        Set a distance on how far do you want to meet people
    </string>
    <string name="age">
        Ages
    </string>
    <string name="ageSelect">
        Age Range
    </string>
    <string name="selected_distance">%1$d miles></string>
    <string name="selected_distance_initial">Selected distance: 1 mile</string>
    <string name="allow_button">Allow</string>
    <string name="dont_allow_button">Don\'t Allow</string>
    <string name="homePageIndicator">This is the home page!</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="if_you_have_any_questions_or_need_help_please_reach_out_to_us_at">If you have any questions or need help, please reach out to us at</string>
    <string name="reach_out_to_support">Reach out to Support</string>
    <string name="add_credit_or_debit_card">Add Credit or Debit Card</string>
    <string name="update_phone_number">Update Phone Number</string>
    <string name="back" />
    <string name="settings">Settings</string>
    <string name="events">Events</string>
    <string name="worth_to_meet">Worth To Meet</string>
    <string name="discover">Discover</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="about_me">About Me</string>
    <string name="interests">Interests</string>
    <string name="Discover">Discover</string>
    <string name="error_loading_data">Error loading data.</string>
    <string name="user_profile_photo">Where photo is at</string>
    <string name="discover_homepage">Discover</string>
    <string name="profile_page">Profile</string>
    <string name="preference">Preference</string>
    <string name="editProfile">Edit Profile</string>
    <string name="tipCenter">Tip Center</string>
    <string name="helpCenter">Help Center</string>
    <string name="search">Search...</string>
    <string name="handle_bar" />
    <string name="search_maps" />
    <string name="no_users">"You've seen all the users in your area, would you like to review your passed ones?"</string>
    <string name="refresh">Refresh</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="EditProfileTitle">Lets change your profile a bit!</string>
    <string name="about_me_title">About Me</string>
    <string name="prompt_title">Prompt Title</string>
    <string name="basic_info">Basic Info</string>
</resources>