<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/SettingsTitle"
        android:layout_width="283dp"
        android:layout_height="53dp"
        android:layout_above="@+id/scrollView"
        android:background="@drawable/rounded_gradient_button"
        android:gravity="center"
        android:text="@string/setting_title"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="381dp"
        android:layout_height="645dp"
        android:layout_above="@+id/SettingsTitle"
        android:background="@android:color/transparent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsTitle"
        app:layout_constraintVertical_bias="0.297"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="793dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="63dp">

            <TextView
                android:id="@+id/AccountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_title"
                android:textColor="@android:color/black"
                android:textSize="27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="146dp" />


            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.025"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AccountTitle" />

            <Button
                android:id="@+id/Email"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/Payments"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:text="@string/payments"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/Verification"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:text="@string/verification"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/PhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:text="@string/phone_number"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/PauseAccount"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginBottom="25dp"
                android:background="@android:color/transparent"
                android:text="@string/pause_account"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/Notifications"
                android:layout_width="167dp"
                android:layout_height="35dp"
                android:text="@string/notifications"
                android:textColor="@android:color/black"
                android:textSize="27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="146dp" />

            <View
                android:layout_width="155dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.025"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Notifications" />

            <Button
                android:id="@+id/PushNotifications"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginBottom="25dp"
                android:background="@android:color/transparent"
                android:text="@string/push_notifications"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/App"
                android:layout_width="80dp"
                android:layout_height="33dp"
                android:text="@string/App_title"
                android:textColor="@android:color/black"
                android:textSize="27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="146dp" />

            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.025"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/App" />

            <Button
                android:id="@+id/DarkMode"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginBottom="25dp"
                android:background="@android:color/transparent"
                android:text="@string/dark_mode"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/SafetyTitle"
                android:layout_width="167dp"
                android:layout_height="35dp"
                android:text="@string/safety_title"
                android:textColor="@android:color/black"
                android:textSize="27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="146dp" />

            <View
                android:layout_width="75dp"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.025"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SafetyTitle" />

            <Button
                android:id="@+id/BlockList"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginBottom="25dp"
                android:background="@android:color/transparent"
                android:text="@string/block_list"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/LegalTitle"
                android:layout_width="167dp"
                android:layout_height="35dp"
                android:text="@string/legal_title"
                android:textColor="@android:color/black"
                android:textSize="27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="146dp" />

            <View
                android:layout_width="75dp"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.025"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LegalTitle" />

            <Button
                android:id="@+id/TOS"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginBottom="25dp"
                android:background="@android:color/transparent"
                android:text="@string/TOS"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/PrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginBottom="25dp"
                android:background="@android:color/transparent"
                android:text="@string/privacy_policy"
                android:textColor="#000"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/DeleteAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@android:color/transparent"
                android:text="@string/delete_account"
                android:textColor="#000"
                android:textSize="13sp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/LogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@android:color/transparent"
                android:text="@string/logout"
                android:textColor="#000"
                android:textSize="13sp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>